URIs and Identity server are configurable through appsettings.json

--- a/src/account-svc/Api/appsettings.json
+++ b/src/account-svc/Api/appsettings.json
@@ -7,5 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "https://localhost:5001"
+  "Urls": "https://localhost:5001",
+  "AllowedCorsOrigins": [
+    "http://localhost:5003"
+  ],
+  "IdentityServerUri": "https://localhost:5000/"
 }
