--- a/src/identity-server/IdentityServer/appsettings.json
+++ b/src/identity-server/IdentityServer/appsettings.json
@@ -7,5 +7,52 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "https://localhost:5000"
+  "Urls": "https://localhost:5000",
+  "IdentityServer": {
+    "ApiResources": [
+      {
+        "Name": "account-api",
+        "DisplayName": "Account API",
+        "Scopes": [
+          {
+            "Name": "account-api",
+            "DisplayName": "Account API"
+          }
+        ]
+      }
+    ],
+    "Clients": [
+      {
+        "Enabled":  true,
+        "ClientId": "js",
+        "ClientName": "JavaScript Client",
+        "AllowedGrantTypes": [ "code" ],
+        "RequirePkce": true,
+        "RequireClientSecret": false,
+
+        "RedirectUris": [ "http://localhost:5003/callback.html" ],
+        "PostLogoutRedirectUris": [ "http://localhost:5003/index.html" ],
+        "AllowedCorsOrigins": [ "http://localhost:5003" ],
+
+        "AllowedScopes": [
+          "openid",
+          "profile",
+          "account-api"
+        ]
+      },
+      {
+        "Enabled": true,
+        "ClientId": "account-service-swagger",
+        "ClientName": "Swagger UI for Account service",
+        "AllowedGrantTypes": [ "implicit" ],
+        "AllowAccessTokensViaBrowser": true,
+        "RedirectUris": [ "https://localhost:5001/swagger/oauth2-redirect.html" ],
+        "AllowedScopes": [
+          "openid",
+          "profile",
+          "account-api"
+        ]
+      }
+    ]
+  }
 }
