Get the name, profile picture and locale from Google sign-in, they are passed in the JWT token claims

--- a/src/identity-server/IdentityServer/appsettings.json
+++ b/src/identity-server/IdentityServer/appsettings.json
@@ -26,7 +26,7 @@
         "Enabled":  true,
         "ClientId": "js",
         "ClientName": "JavaScript Client",
-        "AllowedGrantTypes": [ "code" ],
+        "AllowedGrantTypes": [ "authorization_code" ],
         "RequirePkce": true,
         "RequireClientSecret": false,
 
