authentication is part of the JS frontend, in progress

--- a/src/identity-server/IdentityServer/BoardIdentityServer.csproj
+++ b/src/identity-server/IdentityServer/BoardIdentityServer.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>96ca60fe-6648-4c2d-b887-46492c2a19a5</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
