--- a/src/identity-server/IdentityServer/appsettings.json
+++ b/src/identity-server/IdentityServer/appsettings.json
@@ -8,6 +8,14 @@
   },
   "AllowedHosts": "*",
   "Urls": "https://localhost:5000",
+  "UI": {
+    "Login": "http://localhost:5003/login.html",
+    "Logout": "http://localhost:5003/logout.html",
+    "Error": "http://localhost:5003/error.html"
+  },
+  "AllowedCorsOrigins": [
+    "http://localhost:5003"
+  ],
   "IdentityServer": {
     "ApiResources": [
       {
@@ -23,7 +31,7 @@
     ],
     "Clients": [
       {
-        "Enabled":  true,
+        "Enabled": true,
         "ClientId": "js",
         "ClientName": "JavaScript Client",
         "AllowedGrantTypes": [ "authorization_code" ],
