Game service with mongodb

--- a/src/game-svc/Api/appsettings.json
+++ b/src/game-svc/Api/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
   "Urls": "https://localhost:5001",
   "AllowedCorsOrigins": [
-    "http://localhost:5003"
+    "http://localhost:3000"
   ],
+  "GameDatabaseName":  "gamedb",
   "IdentityServerUri": "https://localhost:5000/"
 }
