--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -20,12 +20,12 @@
   "IdentityServer": {
     "ApiResources": [
       {
-        "Name": "account-api",
-        "DisplayName": "Account API",
+        "Name": "game-api",
+        "DisplayName": "Game API",
         "Scopes": [
           {
-            "Name": "account-api",
-            "DisplayName": "Account API"
+            "Name": "game-api",
+            "DisplayName": "Game API"
           }
         ]
       }
@@ -47,20 +47,21 @@
         "AllowedScopes": [
           "openid",
           "profile",
-          "account-api"
+          "game-api"
         ]
       },
       {
         "Enabled": true,
-        "ClientId": "account-service-swagger",
-        "ClientName": "Swagger UI for Account service",
+        "ClientId": "game-service-swagger",
+        "ClientName": "Swagger UI for Game service",
         "AllowedGrantTypes": [ "implicit" ],
         "AllowAccessTokensViaBrowser": true,
+        "RequireConsent": false,
         "RedirectUris": [ "https://localhost:5001/swagger/oauth2-redirect.html" ],
         "AllowedScopes": [
           "openid",
           "profile",
-          "account-api"
+          "game-api"
         ]
       }
     ]
