--- a/src/identity-server/BoardIdentityServer/BoardIdentityServer.csproj
+++ b/src/identity-server/BoardIdentityServer/BoardIdentityServer.csproj
@@ -7,6 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="3.1.3" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="3.1.3" />
