--- a/src/identity-server/BoardIdentityServer/Properties/launchSettings.json
+++ b/src/identity-server/BoardIdentityServer/Properties/launchSettings.json
@@ -11,16 +11,14 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "Account/Login",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Identity": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "Account/Login",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -29,8 +27,7 @@
     },
     "Docker": {
       "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/",
+      "launchBrowser": false,
       "publishAllPorts": true,
       "useSSL": true
     }
