--- a/src/identity-server/BoardIdentityServer/BoardIdentityServer.csproj
+++ b/src/identity-server/BoardIdentityServer/BoardIdentityServer.csproj
@@ -25,5 +25,9 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\User\" />
+  </ItemGroup>
+
 
 </Project>
