game-svc can receive the id/name of the user, it can create/list waiting rooms

--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -14,7 +14,8 @@
     "Error": "http://localhost:3000/login-error"
   },
   "AllowedCorsOrigins": [
-    "http://localhost:3000"
+    "http://localhost:3000",
+    "https://localhost:5001"
   ],
   "BaseUri": "https://localhost:5000",// could we remove Urls?
   "IdentityServer": {
@@ -54,10 +55,12 @@
         "Enabled": true,
         "ClientId": "game-service-swagger",
         "ClientName": "Swagger UI for Game service",
-        "AllowedGrantTypes": [ "implicit" ],
-        "AllowAccessTokensViaBrowser": true,
+        "AllowedGrantTypes": [ "authorization_code" ],
+        "RequirePkce": true,
+        "RequireClientSecret": false,
         "RequireConsent": false,
         "RedirectUris": [ "https://localhost:5001/swagger/oauth2-redirect.html" ],
+        "AllowedCorsOrigins": [ "https://localhost:5001" ],
         "AllowedScopes": [
           "openid",
           "profile",
