add SignalR, style the frontend for Seek game

--- a/src/game-svc/Api/appsettings.json
+++ b/src/game-svc/Api/appsettings.json
@@ -13,5 +13,8 @@
     "https://localhost:5000"
   ],
   "GameDatabaseName":  "gamedb",
-  "IdentityServerUri": "https://localhost:5000/"
+  "IdentityServerUri": "https://localhost:5000/",
+  "Game": {
+    "MaxNumberOfGamesPerUser":  3
+  }
 }
