get games from game svc, better tests, get user infos from the id token

--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -40,6 +40,7 @@
         "RequirePkce": true,
         "RequireClientSecret": false,
         "RequireConsent": false,
+        "AlwaysIncludeUserClaimsInIdToken": true,
 
         "RedirectUris": [ "http://localhost:3000/login-callback" ],
         "PostLogoutRedirectUris": [ "http://localhost:3000" ],
