--- a/src/game-svc/ApiTests/ApiTests.csproj
+++ b/src/game-svc/ApiTests/ApiTests.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 	<UserSecretsId>c034df1d-3619-4ad1-b49b-47492ee58dae</UserSecretsId>
+	<Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
