yoohoo correct way to deal with refresh tokens and authentication is blazing fast now deativated react strict mode as it was painful (it calls everything twice, makes debugging a misery)

--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "Urls": "https://localhost:5000",
   "UI": {
-    "Login": "http://localhost:3000/login",
+    "Login": "http://localhost:3000/login.html",
     "Logout": "http://localhost:3000/logout",
     "Error": "http://localhost:3000/login-error"
   },
@@ -41,15 +41,23 @@
         "RequireClientSecret": false,
         "RequireConsent": false,
         "AlwaysIncludeUserClaimsInIdToken": true,
+        "AllowOfflineAccess": true,
+        "AccessTokenLifetime": 30, // 1 hour
+        "AbsoluteRefreshTokenLifetime": 2592000, // 30 days
+        "SlidingRefreshTokenLifetime": 1296000, // 15 days
+        "RefreshTokenUsage": "OneTimeOnly",
+        "UpdateAccessTokenClaimsOnRefresh": true,
+        "AllowAccessTokensViaBrowser": true,
 
-        "RedirectUris": [ "http://localhost:3000/login-callback" ],
+        "RedirectUris": [ "http://localhost:3000/login-callback", "http://localhost:3000/silent_renew.html" ],
         "PostLogoutRedirectUris": [ "http://localhost:3000" ],
         "AllowedCorsOrigins": [ "http://localhost:3000" ],
 
         "AllowedScopes": [
           "openid",
           "profile",
-          "game-api"
+          "game-api",
+          "offline_access" // so we can use refresh_tokens to request new access_tokens
         ]
       },
       {
