--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.5",
+    "i18next": "^19.4.5",
     "oidc-client": "^1.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.5.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
