for debugging access token was set to 30s, I reverted that

--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -42,7 +42,7 @@
         "RequireConsent": false,
         "AlwaysIncludeUserClaimsInIdToken": true,
         "AllowOfflineAccess": true,
-        "AccessTokenLifetime": 30, // 1 hour
+        "AccessTokenLifetime": 3600, // 1 day
         "AbsoluteRefreshTokenLifetime": 2592000, // 30 days
         "SlidingRefreshTokenLifetime": 1296000, // 15 days
         "RefreshTokenUsage": "OneTimeOnly",
