Everything is using React hooks/arrow functions rather than being class components, fully localized in English and French, logout correctly working, extracted config to global-vars.js (if we deploy somewhere then only that has to be changed)

--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -10,7 +10,7 @@
   "Urls": "https://localhost:5000",
   "UI": {
     "Login": "http://localhost:3000/login.html",
-    "Logout": "http://localhost:3000/logout",
+    "Logout": "http://localhost:3000/logout.html",
     "Error": "http://localhost:3000/login-error"
   },
   "AllowedCorsOrigins": [
