added possibility to join a game

--- a/src/game-svc/Api/appsettings.json
+++ b/src/game-svc/Api/appsettings.json
@@ -10,11 +10,12 @@
   "Urls": "https://localhost:5001",
   "AllowedCorsOrigins": [
     "http://localhost:3000",
-    "https://localhost:5000"
+    "https://localhost:5000",
+    "https://localhost:5001"
   ],
   "GameDatabaseName":  "gamedb",
   "IdentityServerUri": "https://localhost:5000/",
   "Game": {
-    "MaxNumberOfGamesPerUser":  3
+    "MaxNumberOfGamesPerUser": 999 //3
   }
 }
