--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -42,7 +42,7 @@
         "RequireConsent": false,
         "AlwaysIncludeUserClaimsInIdToken": true,
         "AllowOfflineAccess": true,
-        "AccessTokenLifetime": 3600, // 1 day
+        "AccessTokenLifetime": 3600, // 1 hour
         "AbsoluteRefreshTokenLifetime": 2592000, // 30 days
         "SlidingRefreshTokenLifetime": 1296000, // 15 days
         "RefreshTokenUsage": "OneTimeOnly",
@@ -68,12 +68,21 @@
         "RequirePkce": true,
         "RequireClientSecret": false,
         "RequireConsent": false,
+        "AlwaysIncludeUserClaimsInIdToken": true,
+        "AllowOfflineAccess": true,
+        "AccessTokenLifetime": 3600, // 1 hour
+        "AbsoluteRefreshTokenLifetime": 2592000, // 30 days
+        "SlidingRefreshTokenLifetime": 1296000, // 15 days
+        "RefreshTokenUsage": "OneTimeOnly",
+        "UpdateAccessTokenClaimsOnRefresh": true,
+        "AllowAccessTokensViaBrowser": true,
         "RedirectUris": [ "https://localhost:5001/swagger/oauth2-redirect.html" ],
         "AllowedCorsOrigins": [ "https://localhost:5001" ],
         "AllowedScopes": [
           "openid",
           "profile",
-          "game-api"
+          "game-api",
+          "offline_access"
         ]
       }
     ]
