--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,14 +5,13 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@microsoft/signalr": "^3.1.4",
-    "@nozbe/watermelondb": "^0.15.1",
-    "@nozbe/with-observables": "^1.0.5",
     "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.5",
     "i18next": "^19.4.5",
+    "localforage": "^1.7.4",
     "oidc-client": "^1.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -41,9 +40,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-decorators": "^7.10.1",
-    "@babel/plugin-transform-runtime": "^7.10.1",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.6"
   }
