Add the possibility to get configuration from Azure App configuration

--- a/src/game-svc/Api/appsettings.Development.json
+++ b/src/game-svc/Api/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  //"AzureAppConfigurationUri": null, // uncomment to NOT use Azure app configuration
+  "MongoConnectionString": "mongodb://gamedb-user:<MongoPassword>@localhost:27017/?authSource=gamedb",
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
