--- a/src/game-svc/Api/appsettings.json
+++ b/src/game-svc/Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "KestrelPort": 5001,
+  "AzureAppConfigurationUri": "https://boardz-appconfig.azconfig.io",
+  "AzureManagedIdentityClientId": "game-svc-mi",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -13,9 +16,9 @@
     "https://localhost:5000",
     "https://localhost:5001"
   ],
-  "GameDatabaseName":  "gamedb",
+  "GameDatabaseName": "gamedb",
   "IdentityServerUri": "https://localhost:5000/",
   "Game": {
-    "MaxNumberOfGamesPerUser": 999 //3
+    "MaxNumberOfGamesPerUser": 5
   }
 }
