--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "KestrelPort": 5000,
+  "AzureManagedIdentityClientId": "identity-server-mi",
+  "AzureAppConfigurationUri": "https://boardz-appconfig.azconfig.io",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -17,7 +20,7 @@
     "http://localhost:3000",
     "https://localhost:5001"
   ],
-  "BaseUri": "https://localhost:5000",// could we remove Urls?
+  "BaseUri": "https://localhost:5000", // could we remove Urls?
   "IdentityServer": {
     "ApiResources": [
       {
