--- a/src/identity-server/BoardIdentityServer/BoardIdentityServer.csproj
+++ b/src/identity-server/BoardIdentityServer/BoardIdentityServer.csproj
@@ -20,6 +20,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="3.0.2" />
+    <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
