--- a/src/identity-server/BoardIdentityServer/appsettings.Development.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  //"AzureAppConfigurationUri": null, // uncomment to NOT use Azure app configuration
+  "PostgresConnectionString": "Host=localhost; user id=identityserver-db-user; password=<PostgresPassword>; database=identityserver",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
