--- a/src/game-svc/Api/Dockerfile
+++ b/src/game-svc/Api/Dockerfile
@@ -1,6 +1,8 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
 WORKDIR /app
-EXPOSE 443
+EXPOSE 5001
+ENV ASPNETCORE_ENVIRONMENT="Production"
+ENV ASPNETCORE_URLS="https://+:5001"
 
 FROM mcr.microsoft.com/dotnet/nightly/sdk:5.0-buster-slim AS build
 WORKDIR /src
