--- a/src/game-svc/Api/appsettings.json
+++ b/src/game-svc/Api/appsettings.json
@@ -1,24 +1,23 @@
 {
   "KestrelPort": 5001,
+  "FrontendBaseUri": "https://boardz.fabien-molinet.fr",
+  "IdentityServerBaseUri": "https://boardz.fabien-molinet.fr/api/identity-server/",
+  "GameServiceBaseUri": "https://boardz.fabien-molinet.fr/api/game-svc/",
+
   "AzureAppConfigurationUri": "https://boardz-appconfig.azconfig.io",
   "AzureManagedIdentityClientId": "game-svc-mi",
+
+  "AllowedHosts": "*",
+  "GameDatabaseName": "gamedb",
+  "Game": {
+    "MaxNumberOfGamesPerUser": 5
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*",
-  "Urls": "https://localhost:5001",
-  "AllowedCorsOrigins": [
-    "http://localhost:3000",
-    "https://localhost:5000",
-    "https://localhost:5001"
-  ],
-  "GameDatabaseName": "gamedb",
-  "IdentityServerUri": "https://localhost:5000/",
-  "Game": {
-    "MaxNumberOfGamesPerUser": 5
   }
 }
