--- a/src/identity-server/BoardIdentityServer/appsettings.Development.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.Development.json
@@ -1,6 +1,10 @@
 {
-  //"AzureAppConfigurationUri": null, // uncomment to NOT use Azure app configuration
-  "PostgresConnectionString": "Host=localhost; user id=identityserver-db-user; password=<PostgresPassword>; database=identityserver",
+  "AzureAppConfigurationUri": null, // comment to use Azure app configuration
+  "PostgresConnectionString": "Host=localhost; user id=identityserver-db-user; password={PostgresPassword}; database=identityserver",
+  "FrontendBaseUri": "http://localhost:3000",
+  "IdentityServerBaseUri": "https://localhost:5000",
+  "GameServiceBaseUri": "https://localhost:5001",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
