--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -1,26 +1,19 @@
 {
   "KestrelPort": 5000,
+  "FrontendBaseUri": "https://boardz.fabien-molinet.fr",
+  "IdentityServerBaseUri": "https://boardz.fabien-molinet.fr/api/identity-server/",
+  "GameServiceBaseUri": "https://boardz.fabien-molinet.fr/api/game-svc/",
+
   "AzureManagedIdentityClientId": "identity-server-mi",
   "AzureAppConfigurationUri": "https://boardz-appconfig.azconfig.io",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+
   "AllowedHosts": "*",
-  "Urls": "https://localhost:5000",
   "UI": {
-    "Login": "http://localhost:3000/login.html",
-    "Logout": "http://localhost:3000/logout.html",
-    "Error": "http://localhost:3000/login-error"
+    "Login": "{FrontendBaseUri}/login.html",
+    "Logout": "{FrontendBaseUri}/logout.html",
+    "Error": "{FrontendBaseUri}/login-error"
   },
-  "AllowedCorsOrigins": [
-    "http://localhost:3000",
-    "https://localhost:5001"
-  ],
-  "BaseUri": "https://localhost:5000", // could we remove Urls?
+
   "IdentityServer": {
     "ApiResources": [
       {
@@ -52,9 +45,9 @@
         "UpdateAccessTokenClaimsOnRefresh": true,
         "AllowAccessTokensViaBrowser": true,
 
-        "RedirectUris": [ "http://localhost:3000/login-callback", "http://localhost:3000/silent_renew.html" ],
-        "PostLogoutRedirectUris": [ "http://localhost:3000" ],
-        "AllowedCorsOrigins": [ "http://localhost:3000" ],
+        "RedirectUris": [ "{FrontendBaseUri}/login-callback", "{FrontendBaseUri}/silent_renew.html" ],
+        "PostLogoutRedirectUris": [ "{FrontendBaseUri}" ],
+        "AllowedCorsOrigins": [ "{FrontendBaseUri}" ],
 
         "AllowedScopes": [
           "openid",
@@ -79,8 +72,8 @@
         "RefreshTokenUsage": "OneTimeOnly",
         "UpdateAccessTokenClaimsOnRefresh": true,
         "AllowAccessTokensViaBrowser": true,
-        "RedirectUris": [ "https://localhost:5001/swagger/oauth2-redirect.html" ],
-        "AllowedCorsOrigins": [ "https://localhost:5001" ],
+        "RedirectUris": [ "{GameServiceBaseUri}/swagger/oauth2-redirect.html" ],
+        "AllowedCorsOrigins": [ "{GameServiceBaseUri}" ],
         "AllowedScopes": [
           "openid",
           "profile",
@@ -89,5 +82,13 @@
         ]
       }
     ]
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   }
 }
