--- a/src/game-svc/Api/appsettings.Development.json
+++ b/src/game-svc/Api/appsettings.Development.json
@@ -1,6 +1,10 @@
 {
-  //"AzureAppConfigurationUri": null, // uncomment to NOT use Azure app configuration
-  "MongoConnectionString": "mongodb://gamedb-user:<MongoPassword>@localhost:27017/?authSource=gamedb",
+  "AzureAppConfigurationUri": null, // comment to use Azure app configuration
+  "MongoConnectionString": "mongodb://gamedb-user:{MongoPassword}@localhost:27017/?authSource=gamedb",
+  "FrontendBaseUri": "http://localhost:3000",
+  "IdentityServerBaseUri": "https://localhost:5000",
+  "GameServiceBaseUri": "https://localhost:5001",
+
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
