--- a/src/identity-server/BoardIdentityServer/Dockerfile
+++ b/src/identity-server/BoardIdentityServer/Dockerfile
@@ -1,6 +1,8 @@
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
-EXPOSE 443
+EXPOSE 5000
+ENV ASPNETCORE_ENVIRONMENT="Production"
+ENV ASPNETCORE_URLS="https://+:5000"
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
