--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -24,5 +24,9 @@ http {
         root /app;
         index index.html;
         include /etc/nginx/mime.types;
+		
+		location / {
+            try_files $uri $uri/ /index.html;
+        }
     }
 }
