should have been the managed identity client id, not the name

--- a/src/game-svc/Api/appsettings.json
+++ b/src/game-svc/Api/appsettings.json
@@ -5,7 +5,7 @@
   "GameServiceBaseUri": "https://boardz.fabien-molinet.fr/api/game-svc/",
 
   "AzureAppConfigurationUri": "https://boardz-appconfig.azconfig.io",
-  "AzureManagedIdentityClientId": "game-svc-mi",
+  "AzureManagedIdentityClientId": "decd327c-1d6a-4d6d-a216-f3c773158f6c", // refers to game-svc-mi
 
   "AllowedHosts": "*",
   "GameDatabaseName": "gamedb",
