--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -4,7 +4,7 @@
   "IdentityServerBaseUri": "https://boardz.fabien-molinet.fr/api/identity-server/",
   "GameServiceBaseUri": "https://boardz.fabien-molinet.fr/api/game-svc/",
 
-  "AzureManagedIdentityClientId": "identity-server-mi",
+  "AzureManagedIdentityClientId": "f392f66d-ee7a-4adb-afef-ffd9c44fb1fa", // refers to identity-server-mi
   "AzureAppConfigurationUri": "https://boardz-appconfig.azconfig.io",
 
   "AllowedHosts": "*",
