--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -1,6 +1,13 @@
-worker_processes 4;
+# auto detects a good number of processes to run
+worker_processes auto;
 
-events { worker_connections 1024; }
+#Provides the configuration file context in which the directives that affect connection processing are specified.
+events {
+    # Sets the maximum number of simultaneous connections that can be opened by a worker process.
+    worker_connections 8000;
+    # Tells the worker to accept multiple connections at a time
+    multi_accept on;
+}
 
 http {
     server {
@@ -26,7 +33,29 @@ http {
         include /etc/nginx/mime.types;
 		
 		location / {
+            # First attempt to serve request as file, then
+            # as directory, then fall back to redirecting to index.html
             try_files $uri $uri/ /index.html;
+        }
+
+        # Media: images, icons, video, audio, HTC
+        location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+          expires 1M;
+          access_log off;
+          add_header Cache-Control "public";
+        }
+
+        # Javascript and CSS files
+        location ~* \.(?:css|js)$ {
+            try_files $uri =404;
+            expires 1y;
+            access_log off;
+            add_header Cache-Control "public";
+        }
+
+        # Any route containing a file extension (e.g. /devicesfile.js)
+        location ~ ^.+\..+$ {
+            try_files $uri =404;
         }
     }
 }
