fix game-svc Dockerfile

--- a/src/game-svc/Api/Dockerfile
+++ b/src/game-svc/Api/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 5001
 ENV ASPNETCORE_ENVIRONMENT="Production"
 ENV ASPNETCORE_URLS="https://+:5001"
 
-FROM mcr.microsoft.com/dotnet/nightly/sdk:5.0-buster-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
 WORKDIR /src
 COPY ["Api/Api.csproj", "Api/"]
 RUN dotnet restore "Api/Api.csproj"
