global vars should depend on the host it's running from

--- a/src/frontend/public/manifest.json
+++ b/src/frontend/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "Play games with your friends",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "https://boardz.fabien-molinet.fr",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
