dont cache js/css so long as we have some static files we change, changed Startup for identity server since format of these configuration items changed

--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -45,15 +45,7 @@ http {
           add_header Cache-Control "public";
         }
 
-        # Javascript and CSS files
-        location ~* \.(?:css|js)$ {
-            try_files $uri =404;
-            expires 1y;
-            access_log off;
-            add_header Cache-Control "public";
-        }
-
-        # Any route containing a file extension (e.g. /devicesfile.js)
+        # Any other route
         location ~ ^.+\..+$ {
             try_files $uri =404;
         }
