move identity server to it's own subdomain: boardz-identity

--- a/src/game-svc/Api/appsettings.json
+++ b/src/game-svc/Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "KestrelPort": 5001,
   "FrontendBaseUri": "https://boardz.fabien-molinet.fr",
-  "IdentityServerBaseUri": "https://boardz.fabien-molinet.fr/api/identity-server/",
+  "IdentityServerBaseUri": "https://boardz-identity.fabien-molinet.fr",
   "GameServiceBaseUri": "https://boardz.fabien-molinet.fr/api/game-svc/",
 
   "AzureAppConfigurationUri": "https://boardz-appconfig.azconfig.io",
