--- a/src/identity-server/BoardIdentityServer/appsettings.json
+++ b/src/identity-server/BoardIdentityServer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "KestrelPort": 5000,
   "FrontendBaseUri": "https://boardz.fabien-molinet.fr",
-  "IdentityServerBaseUri": "https://boardz.fabien-molinet.fr/api/identity-server/",
+  "IdentityServerBaseUri": "https://boardz-identity.fabien-molinet.fr",
   "GameServiceBaseUri": "https://boardz.fabien-molinet.fr/api/game-svc/",
 
   "AzureManagedIdentityClientId": "f392f66d-ee7a-4adb-afef-ffd9c44fb1fa", // refers to identity-server-mi
