--- a/src/helm-charts/boardz-apps/templates/ingress.yaml
+++ b/src/helm-charts/boardz-apps/templates/ingress.yaml
@@ -3,10 +3,6 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-    #nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false" # see https://github.com/kubernetes/ingress-nginx/issues/3511
-    #nginx.ingress.kubernetes.io/auth-tls-secret: boardz-tls
-    #nginx.ingress.kubernetes.io/auth-tls-verify-client: "true"
-    #nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
   name: boardz-ingress
@@ -24,10 +20,33 @@ spec:
               servicePort: 3000
             path: /(.*)
           - backend:
-              serviceName: identity-server
-              servicePort: 5000
-            path: /api/identity-server/(.*)
-          - backend:
               serviceName: game-svc
               servicePort: 5001
             path: /api/game-svc/(.*)
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
+    nginx.ingress.kubernetes.io/proxy-buffers: "4 256k"
+    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"
+    nginx.ingress.kubernetes.io/client-header-buffer-size: "64k"
+    nginx.ingress.kubernetes.io/http2-max-field-size: "16k"
+    nginx.ingress.kubernetes.io/http2-max-header-size: "128k"
+    nginx.ingress.kubernetes.io/large-client-header-buffers: "8 64k"
+  name: boardz-identity-ingress
+spec:
+  tls:
+    - hosts:
+      - boardz-identity.fabien-molinet.fr
+      secretName: boardz-tls
+  rules:
+    - host: boardz-identity.fabien-molinet.fr
+      http:
+        paths:
+          - backend:
+              serviceName: identity-server
+              servicePort: 5000
