--- a/src/helm-charts/boardz-apps/templates/ingress.yaml
+++ b/src/helm-charts/boardz-apps/templates/ingress.yaml
@@ -27,9 +27,9 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
-    nginx.ingress.kubernetes.io/affinity: cookie # so an app holds connection to the same instance for WebSockets
-    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600 # default is 60s which is too little for WebSockets
-    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600 # default is 60s which is too little for WebSockets
+    nginx.ingress.kubernetes.io/affinity: "cookie" # so an app holds connection to the same instance for WebSockets
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600" # default is 60s which is too little for WebSockets
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600" # default is 60s which is too little for WebSockets
   name: boardz-game-svc-ingress
 spec:
   tls:
