--- a/src/identity-server/BoardIdentityServer/BoardIdentityServer.csproj
+++ b/src/identity-server/BoardIdentityServer/BoardIdentityServer.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConfigurationSubstitutor" Version="1.0.0" />
     <PackageReference Include="IdentityServer4" Version="3.1.3" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.4" />
